# GaitEventDetection

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  auto.sh  cmake_install.cmake  fsrReading.cpp  fsrReading.h  gaitEvent.cbp  gaitEventDetect  gaitEventDetect.cbp  logCreate.cpp  logCreate.h  macroDefinition.h  main.cpp  signalInterrupt.cpp  signalInterrupt.h  softExos.cbp  timeInterval.cpp  timeInterval.h  xsensImu.cpp  xsensImu.h
Xsens/include/xsens/: xseuler.h
logFile/: 20250108_154125_LC1.csv
